--- a/IQCare.CCC/IQCare.Web.CCC/CCC/Greencard.Master
+++ b/IQCare.CCC/IQCare.Web.CCC/CCC/Greencard.Master
@@ -230,6 +230,9 @@
 									<span class="fa fa-calendar fa-2x text-info pull-left"></span><strong class="text-info">Appointments </strong><span class="badge"><asp:Label ID="lblAppointments" runat="server">0</asp:Label></span>
 								</a>
 							  
+                             <a href='<%=ResolveClientUrl("~/CCC/CaseSummary/PatientClinicalSummary.aspx") %>' class="list-group-item" id="menuPatientClinicalSummary">
+									<span class="fa fa-calendar fa-2x text-info pull-left"></span><strong class="text-info">Patient Clinical Summary </strong>
+								</a>
                                
                                <asp:LinkButton ID="menuScreening" ClientIDMode="Static" runat="server" CssClass="list-group-item" OnClick="New_Depression_Click">
 								  <span class="fa fa-stethoscope fa-lg pull-left text-info  "></span><strong class="text-info">DepressionScreening</strong></asp:LinkButton>
