Added Patient Clinical Review Checklist

--- a/IQCare.CCC/IQCare.Web.CCC/CCC/Greencard.Master
+++ b/IQCare.CCC/IQCare.Web.CCC/CCC/Greencard.Master
@@ -234,6 +234,8 @@
 								  <span class="fa fa-stethoscope fa-lg pull-left text-info  "></span><strong class="text-info">Cervical cancer screening</strong></asp:LinkButton>
                              <a href='<%=ResolveClientUrl("~/CCC/CaseSummary/PatientClinicalSummary.aspx") %>' class="list-group-item" id="menuPatientClinicalSummary">
 									<span class="fa fa-calendar fa-2x text-info pull-left"></span><strong class="text-info">Patient Clinical Summary </strong>
+                             <a href='<%=ResolveClientUrl("~/CCC/CaseSummary/PatientClinicalReviewSummary.aspx") %>' class="list-group-item" id="menuPatientClinicalSummary">
+									<span class="fa fa-calendar fa-2x text-info pull-left"></span><strong class="text-info">Patient Clinical Review Summary </strong>
 								</a>
                                
                                <asp:LinkButton ID="menuScreening" ClientIDMode="Static" runat="server" CssClass="list-group-item" OnClick="New_Depression_Click">
@@ -549,7 +551,8 @@
                 $("#menuEnhanceAdherence").hide();
                 $("#menuBarriersAdherence").hide();
 			   // $("#menuPatientHome").hide();
-				$("#menuPatientAppointments").hide();
+                $("#menuPatientAppointments").hide();
+                $("#menuPatientClinicalSummary").hide();
 				$("#menuPatientCareEnded").hide();
 				$("#menuScheduleAppointments").hide();
 				$("#menuCaptureVitals").hide();
@@ -583,7 +586,8 @@
                 $("#menuBarriersAdherence").show();
 				//$("#menuNewEncounter").hide();
 				$("#menuPatientHome").show();
-				$("#menuPatientAppointments").show();
+                $("#menuPatientAppointments").show();
+                $("#menuPatientClinicalSummary").show();
 				$("#menuPatientCareEnded").show();
 				$("#menuScheduleAppointments").show();
 				$("#menuCaptureVitals").show();
