Resolved erronous message showing when checking in clients who are active but were once upon-a-time careended

--- a/IQCare.CCC/IQCare.Web.CCC/CCC/Greencard.Master
+++ b/IQCare.CCC/IQCare.Web.CCC/CCC/Greencard.Master
@@ -435,7 +435,14 @@
 						//        notes = obj.CareEndingNotes;
 
 						//    });
-						if (response.d === 0 || response.d==='[]') /*patient not careended-checkin*/
+                        var res = JSON.parse(response.d);
+                        var activeRecords = 0;
+                        if (res.length > 0) {
+                            activeRecords = res.filter(function (o) {
+                                return o.DeleteFlag == false
+                            }).length;
+                        }
+						if (response.d === 0 || response.d==='[]' || activeRecords === 0) /*patient not careended-checkin*/
 						{
 							$.ajax({
 								type: "POST",
