--- a/Solutions/IQCare.Core/IQCare/frontend/app/records/inline-search/inline-search.component.html
+++ b/Solutions/IQCare.Core/IQCare/frontend/app/records/inline-search/inline-search.component.html
@@ -8,6 +8,12 @@
         <div class="row">
             <div class="col-lg-3 col-sm-3 col-xs-12">
                 <mat-form-field>
+                    <input matInput placeholder="IndentifierValue" formControlName="identifierValue" id="identifierValue" name="identifierValue">
+                </mat-form-field>
+            </div>
+
+            <div class="col-lg-3 col-sm-3 col-xs-12">
+                <mat-form-field>
                     <input matInput placeholder="FirstName" formControlName="firstName" id="firstName" name="firstName">
                 </mat-form-field>
             </div>
@@ -37,17 +43,17 @@
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
                     <!--- Note that these columns can be defined in any order.
-                              The actual rendered columns are set as a property on the row definition" -->
+              The actual rendered columns are set as a property on the row definition" -->
 
                     <ng-container matColumnDef="select">
                         <th mat-header-cell *matHeaderCellDef>
                             <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-                                [indeterminate]="selection.hasValue() && !isAllSelected()">
+                                          [indeterminate]="selection.hasValue() && !isAllSelected()">
                             </mat-checkbox>
                         </th>
                         <td mat-cell *matCellDef="let row">
                             <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-                                [checked]="selection.isSelected(row)">
+                                          [checked]="selection.isSelected(row)">
                             </mat-checkbox>
                         </td>
                     </ng-container>
@@ -80,6 +86,11 @@
                     <ng-container matColumnDef="gender">
                         <th mat-header-cell *matHeaderCellDef> Gender </th>
                         <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="identifierValue">
+                        <th mat-header-cell *matHeaderCellDef> Identifier Value </th>
+                        <td mat-cell *matCellDef="let element"> {{element.identifierValue}} </td>
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
